# RPS

./: .gitignore  .uvrc  PLAN.md  README.md  download_model.py  pyproject.toml  requirements.txt
config/: config.yaml  config.yaml.example
docs/: arm64_installation.md  camera_device_detection.md  camera_usage.md  fix_torch_dependencies.md  game_logic_usage.md  install_pytorch_cuda.md  pytorch_cuda_setup.md  rknn_conversion.md  rknn_installation.md  rknn_usage.md  rknn_windows_testing.md  system_integration.md  uv_setup.md  yolov8_gesture_recognition.md
scripts/: convert_rknn.py  convert_to_rknn.py  detect_camera.py  export_onnx.py  fix_torch_dependencies.sh
src/: __init__.py  app.py  main.py
src/game/: __init__.py  game_controller.py
src/game/game_logic/: __init__.py  game_manager.py  game_rules.py  gesture.py
src/game/gesture_recognition/: __init__.py  gesture_recognizer.py  recognition_result.py  recognizer_factory.py  rknn_recognizer.py
src/game/state_machine/: __init__.py  game_state.py  game_state_machine.py
src/hardware/: __init__.py  config_manager.py  i2c_base.py
src/hardware/base/: __init__.py  camera_base.py  robot_arm_base.py  voice_base.py
src/hardware/factory/: __init__.py  hardware_factory.py
src/hardware/implementations/: __init__.py
src/hardware/implementations/camera/: __init__.py  image_processor.py  usb_camera.py
src/hardware/implementations/robot_arm/: __init__.py  uhand2.py
src/hardware/implementations/voice/: __init__.py  ci1302.py
src/utils/: __init__.py  config_loader.py  error_handler.py  exceptions.py  logger.py
tests/: test_integration.py  test_mediapipe_gesture.py  test_onnx_metadata.py  test_rknn_gesture.py  test_rknn_metadata.py  test_usb_camera.py  test_yolo_metadata.py
